--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,7 @@
   --fs-500: 1.375rem;
   --fs-600: 1.875rem;
   --fs-700: 2rem;
+  --fs-xl: 3rem;
 
   --ff-body: "Arial", sans-serif;
   --ff-heading: "Garamond", serif;
@@ -134,7 +135,7 @@ strong {
 
 section,
 .section {
-  padding: 1.5rem;
+  padding: min(10vh, 4rem);
 }
 
 
@@ -147,6 +148,13 @@ section,
    and add margin to the top for proper
    spacing */
    
+.bg-background-secondary-300 {
+  background-color: var(--clr-secondary-500);
+}
+
+.margin-block-3 {
+  margin-block: 3rem;
+}
 
 .flow > *:where(:not(:first-child)) {
   margin-top: var(--flow-spacer, 1em);
@@ -323,6 +331,7 @@ footer {
   position: relative;
   width: 100%;
   overflow: hidden;
+  padding: 0;
 }
 
 .hero-image {
@@ -352,7 +361,7 @@ footer {
   }
 }
 
-.episode-preview {
+.episode-feature {
   background-color: var(--clr-white);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   padding: 3rem;
@@ -362,21 +371,20 @@ footer {
   margin-inline: auto;
 }
 
-.episode-preview img {
-  height: 300px;
+.episode-feature img {
   object-fit: cover;
   aspect-ratio: 1 / 1;
   width: 100%;
 }
 
-.episode-preview h2 {
+.episode-feature h2 {
   font-size: var(--fs-500);
   letter-spacing: 5px;
   color: var(--clr-primary-300);
   text-transform: uppercase;
 }
 
-.episode-preview h3 {
+.episode-feature h3 {
   font-size: var(--fs-300);
   font-weight: var(--fw-400);
   letter-spacing: 3px;
@@ -384,54 +392,27 @@ footer {
   text-transform: uppercase;
 }
 
-.episode-preview-text {
+.episode-feature__text {
   display: flex;
   gap: 1rem;
   flex-direction: column;
   justify-content: space-around;
 }
 
-.episode-heading {
+.episode-feature__heading {
   display: flex;
   flex-direction: column;
   gap: 0.25rem
 }
 
-.episode-preview-text audio {
+.episode-feature__text audio {
   width: 100%;
 }
 
 /* Target the controls in browsers that support custom styling */
-.episode-preview-text audio::-webkit-media-controls-panel {
+.episode-feature__-text audio::-webkit-media-controls-panel {
   background-color: #66806b;
   /* Your primary color */
-}
-
-@media (min-width: 992px) {
-
-  section, .section {
-    padding: min(10vh, 4rem) 0;
-  }
-
-  .hero {
-    height: 850px;
-  }
-
-  .hero-content {
-      left: 20%;
-    }
-  
-    .hero-content h1 span {
-      display: inline-block;
-      font-size: 8rem;
-    }
-
-  .episode-preview {
-    margin-top: -12rem;
-    z-index: 2;
-    position: relative;
-    grid-template-columns: 0.25fr 0.75fr;
-  }
 }
 
 .podcast-description {
@@ -465,6 +446,61 @@ footer {
   font-weight: var(--fw-400);
   color: var(--clr-secondary-400);
   text-transform: uppercase;
+}
+
+.featured-episode {
+  display: grid;
+  padding-block: 0 3rem;
+  gap: 3rem;
+  align-items: center;
+  max-width: 1100px;
+  margin-inline: auto;
+  justify-content: center;
+}
+
+.featured-episode h2 {
+  font-size: var(--fs-xl);
+  color: var(--clr-secondary-300);
+  padding-block: 0 2rem;
+}
+
+.featured-episode__media{
+  display: flex;
+  justify-content: center;
+  transform: translate(97.3783px, -100px) rotate(15deg);
+}
+
+.featured-episode__phone {
+  display: none;
+  max-width: 400px;
+}
+
+.episode-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: start;
+  justify-content: space-between;
+  max-width: 1100px;
+  margin-inline: auto;
+  padding: 3rem 1.5rem;
+  border-top: 1px solid var(--clr-secondary-300);
+  border-bottom: px solid var(--clr-secondary-300);
+}
+
+.episode-list--last {
+  border-bottom: none;
+}
+
+.episode-list h3 {
+  color: var(--clr-primary-300);
+  font-size: var(--fs-600);
+  white-space: nowrap;
+}
+
+.episode-list span {
+  color: var(--clr-secondary-300);
+  font-size: var(--fs-xl);
 }
 
 .featured-articles {
@@ -594,4 +630,42 @@ footer {
 .btn--neutral:focus {
   color: var(--clr-neutral-100);
   background-color: var(--clr-neutral-900);
+}
+
+@media (min-width: 992px) {
+
+  .hero {
+    height: 850px;
+  }
+
+  .hero-content {
+    left: 20%;
+  }
+
+  .hero-content h1 span {
+    display: inline-block;
+    font-size: 8rem;
+  }
+
+  .episode-feature {
+    margin-top: -12rem;
+    z-index: 2;
+    position: relative;
+    grid-template-columns: 0.25fr 0.75fr;
+  }
+
+  .episode-list {
+    flex-direction: row;
+    align-items: center;
+    padding: 3rem 0;
+  }
+
+  .featured-episode {
+    grid-template-columns: 0.75fr 0.25fr;
+  }
+
+    .featured-episode__phone {
+      display: block;
+    }
+
 }
