--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -453,7 +453,7 @@ footer {
   padding-block: 0 3rem;
   gap: 5rem;
   align-items: center;
-  max-width: 1100px;
+  max-width: 1400px;
   margin-inline: auto;
   justify-content: center;
 }
@@ -464,7 +464,7 @@ footer {
   padding-block: 0 2rem;
 }
 
-.featured-episode__media{
+.featured-episode__media {
   display: flex;
   justify-content: center;
   transform: translate(97.3783px, -100px) rotate(15deg);
@@ -476,13 +476,10 @@ footer {
 }
 
 .episode-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 1.5rem;
-  align-items: start;
-  justify-content: space-between;
-  max-width: 1100px;
-  margin-inline: auto;
+  grid-template-columns: auto;
+  align-items: center;
   padding: 3rem 0;
   border-top: 1px solid var(--clr-secondary-300);
   border-bottom: px solid var(--clr-secondary-300);
@@ -495,7 +492,6 @@ footer {
 .episode-list h3 {
   color: var(--clr-primary-300);
   font-size: var(--fs-600);
-  white-space: nowrap;
 }
 
 .episode-list span {
@@ -655,8 +651,8 @@ footer {
   }
 
   .episode-list {
-    flex-direction: row;
-    align-items: center;
+    grid-template-columns: 0.25fr 1fr auto;
+    gap: 0;
   }
 
   .featured-episode {
