--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,43 +7,11 @@
         <link rel="stylesheet" href="/styles/style.css">
         <script src="/scripts/main.js" defer></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="icon" type="image/x-icon" href="/assets/logo/">
+        <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
+        <title>{{ title | default("Everything is Grace Podcast") }}</title>
     </head>
     <body>
-        <header>
-            <nav>
-                <ul class="primary-navigation">
-                    <li>HOME</li>
-                    <li>MEET KARA</li>
-                    <li>EXPERIENCE</li>
-                    <li>PORTFOLIO</li>
-                    <li>BLOG</li>
-                    <li>CONTACT</li>
-                    <li>PODCAST</li>
-                </ul>
-                <div class="primary-header">
-                    <div>
-                        <p>Serving Virginia, Washington D.C.<br>and Maryland</p>
-                    </div>
-                    <div>
-                        <a href="https://karalorynphotography.com" target="_self">
-                            <img src="/assets/logo/kara-loryn-photography-logo-dark-green.png" alt="Kara Loryn Photography"/>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="https://www.facebook.com/yourpage" target="_blank">
-                            <i class="bi bi-facebook"></i>
-                        </a>
-                        <a href="https://www.instagram.com/yourhandle" target="_blank">
-                            <i class="bi bi-instagram"></i>
-                        </a>
-                        <a role="button" href="/contact" target="_self">Inquire
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </nav>
-        </header>
+        {% include "baseheader.njk" %}
         <main>
             {{ content | safe }}
         </main>
