Add intersection observer to bg image
Dynamically add when scrolled into view;  otherwise none is shown on page load.

--- a/src/index.njk
+++ b/src/index.njk
@@ -84,7 +84,7 @@ layout: 'base.njk'
         class="featured-episode__phone"></div>
   </div>
 </section>
-<section class='host-profile--background '>
+<section class="host-profile--background bg-lazy-image ">
   <div class="host-profile">
     <div>
       <img src="/assets/headshots/meet-kara-loryn-wedding-photographer-4.jpg" alt="Kara Lilly" />
