--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
         <title>{{ title | default("Everything is Grace Podcast") }}</title>
+        <style>{% getBundle "css" %}</style>
+
+        {% css %}
+        .bg-lazy-image {background-image: none !important}
+        {% endcss %}
     </head>
     <body>
         {% include "baseheader.njk" %}
