Update hero img load and max width profile section

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: 'base.njk'
 ---
 
 <section class="hero">
-  <img src="/assets/matt-botsford-OKLqGsCT8qs-unsplash.jpg" alt="Hero Image" class="hero-image">
+  <img src="/assets/matt-botsford-OKLqGsCT8qs-unsplash.jpg" alt="Hero Image" class="hero-image" loading="eager">
     <div class="hero-content">
       <h1>
         everything is
