--- a/src/_includes/baseheader.njk
+++ b/src/_includes/baseheader.njk
@@ -19,10 +19,10 @@
                 </a>
             </div>
             <div>
-                <a href="https://www.facebook.com/yourpage" target="_blank">
+                <a href="https://www.facebook.com/yourpage" target="_blank" aria-label="Follow Kara Loryn Lilly on Facebook">
                     <i class="bi bi-facebook"></i>
                 </a>
-                <a href="https://www.instagram.com/yourhandle" target="_blank">
+                <a href="https://www.instagram.com/yourhandle" target="_blank" aria-label="Follow Kara Loryn Lilly on Instagram">
                     <i class="bi bi-instagram"></i>
                 </a>
                 <a role="button" href="/contact" target="_self">Inquire
