--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/styles/style.css">
-        <script src="/scripts/main.js" defer></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <script src="/scripts/main.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" />
+        <script src="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.js" defer></script>
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
         <title>{{ title | default("Everything is Grace Podcast") }}</title>
         <style>{% getBundle "css" %}</style>
@@ -25,5 +26,8 @@
                 &copy; {% year %} KARA LORYN LILLY
             </p>
         </footer>
+            <!-- outputs all the icons used on the page -->
+            {% getBundle "fontawesome" %}
+            <script type="moduel" src="/scripts/slider.js"></script>
     </body>
 </html>
