Add a11y slider to site

--- a/src/_includes/baseheader.njk
+++ b/src/_includes/baseheader.njk
@@ -20,13 +20,13 @@
             </div>
             <div>
                 <a href="https://www.facebook.com/yourpage" target="_blank" aria-label="Follow Kara Loryn Lilly on Facebook">
-                    <i class="bi bi-facebook"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="https://www.instagram.com/yourhandle" target="_blank" aria-label="Follow Kara Loryn Lilly on Instagram">
-                    <i class="bi bi-instagram"></i>
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a role="button" href="/contact" target="_self">Inquire
-                    <i class="bi bi-arrow-right"></i>
+                    <i class="fa-solid fa-arrow-right"></i>
                 </a>
             </div>
         </div>
