--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -26,8 +26,6 @@
                 &copy; {% year %} KARA LORYN LILLY
             </p>
         </footer>
-            <!-- outputs all the icons used on the page -->
-            {% getBundle "fontawesome" %}
-            <script type="moduel" src="/scripts/slider.js"></script>
+        <script type="module" src="/scripts/slider.js"></script>
     </body>
 </html>
